--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,7 +24,7 @@
         </div>
       </td>
       <td>
-        <p>コメント数：<%= @book.comments.count %></p>
+        <p>コメント数：<%= book.comments.count %></p>
       </td>
     </tr>
     <% end %>
